feat: add comprehensive favicon and PWA manifest
- Add complete favicon set (ICO, SVG, PNG variants)
- Include Apple touch icon and Android chrome icons
- Add PWA manifest with app metadata and theme colors
- Standardize background color value across files

--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!doctype html>
-<html
-    lang="en"
-    class="dark"
-    style="background-color: oklch(0.1975 0.0078 274.6)"
->
+<html lang="en" class="dark" style="background-color: oklch(0.19 0.008 275)">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + React + TS</title>
+        <title>Holy Grail</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,6 +11,14 @@
             href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
             rel="stylesheet"
         />
+
+        <!-- favicons -->
+        <link rel="icon" href="/favicon.ico" sizes="any" />
+        <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+        <link rel="manifest" href="/site.webmanifest" />
     </head>
     <body>
         <div id="root"></div>
