--- a/index.html
+++ b/index.html
@@ -3,7 +3,33 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- title, name, description defined in __root via @tanstack/react-router config -->
+
+        <!-- OpenGraph meta tags for social media sharing -->
+        <meta name="description" content="Diablo 2 Holy Grail item tracker" />
+        <title>Holy Grail</title>
+
+        <!-- OpenGraph config -->
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="Holy Grail" />
+        <meta property="og:title" content="Holy Grail - Diablo 2 Item Tracker" />
+        <meta
+            property="og:description"
+            content="Track your Diablo 2 Holy Grail progress. Find and collect unique items, set items, and runes."
+        />
+        <meta property="og:url" content="https://holy-grail.chuggs.net" />
+        <meta property="og:image" content="https://holy-grail.chuggs.net/og-image.png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
+        <meta property="og:image:alt" content="Holy Grail - Diablo 2 Item Tracker" />
+
+        <!-- Twitter Card tags -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Holy Grail - Diablo 2 Item Tracker" />
+        <meta
+            name="twitter:description"
+            content="Track your Diablo 2 Holy Grail progress. Find and collect unique items, set items, and runes."
+        />
+        <meta name="twitter:image" content="https://holy-grail.chuggs.net/og-image.png" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
