docs(meta): improve description clarity for social sharing
• Update og:description and twitter:description to better reflect the
  app's purpose as a progress tracker
• Change "Find and collect" to "Check off" to emphasize the tracking
  functionality rather than gameplay

--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!-- OpenGraph meta tags for social media sharing -->
         <meta name="description" content="Diablo 2 Holy Grail item tracker" />
         <title>Holy Grail</title>
 
-        <!-- OpenGraph config -->
+        <!-- OpenGraph meta tags for social media sharing -->
         <meta property="og:type" content="website" />
         <meta property="og:site_name" content="Holy Grail" />
         <meta property="og:title" content="Holy Grail - Diablo 2 Item Tracker" />
         <meta
             property="og:description"
-            content="Track your Diablo 2 Holy Grail progress. Find and collect unique items, set items, and runes."
+            content="Track your Diablo 2 Holy Grail progress. Check off unique items, set items, and runes as you complete your collection."
         />
         <meta property="og:url" content="https://holy-grail.chuggs.net" />
         <meta property="og:image" content="https://holy-grail.chuggs.net/og-image.png" />
@@ -27,7 +26,7 @@
         <meta name="twitter:title" content="Holy Grail - Diablo 2 Item Tracker" />
         <meta
             name="twitter:description"
-            content="Track your Diablo 2 Holy Grail progress. Find and collect unique items, set items, and runes."
+            content="Track your Diablo 2 Holy Grail progress. Check off unique items, set items, and runes as you complete your collection."
         />
         <meta name="twitter:image" content="https://holy-grail.chuggs.net/og-image.png" />
 
