feat: improve mobile UX with viewport and scroll enhancements
• Add viewport-fit=cover for better notched device support
• Prevent overscroll bounce with overscroll-behavior-y: auto

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark" style="background-color: oklch(0.19 0.008 275)">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 
         <meta name="description" content="Diablo 2 Holy Grail item tracker" />
         <title>Holy Grail</title>
